<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/image_art"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginStart="@dimen/text_size_12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/text_title"
            android:text="@string/text_track_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_15"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@+id/image_art"
            app:layout_constraintStart_toEndOf="@+id/image_art"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/text_artist"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toStartOf="@+id/text_trackLength"
            android:layout_marginEnd="@dimen/text_size_12"/>

    <TextView
            android:id="@+id/text_artist"
            android:text="@string/text_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@+id/image_art"
            app:layout_constraintStart_toEndOf="@+id/image_art"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintEnd_toStartOf="@+id/text_trackLength"
            android:layout_marginEnd="@dimen/text_size_12"/>

    <TextView
            android:id="@+id/text_trackLength"
            android:text="@string/text_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_title"
            app:layout_constraintBottom_toTopOf="@+id/text_artist"/>

    <TextView
            android:text="@string/text_genre"
            android:paddingStart="@dimen/padding_12"
            android:paddingEnd="@dimen/padding_12"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/white"
            android:background="@drawable/genre_pill_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_genre"
            android:textSize="@dimen/text_size_12"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            app:layout_constraintLeft_toRightOf="@+id/image_art"
            app:layout_constraintStart_toEndOf="@+id/image_art"
            app:layout_constraintTop_toBottomOf="@+id/text_artist"
            />

    <TextView
            android:id="@+id/text_price"
            android:text="@string/text_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_12"
            android:paddingEnd="@dimen/padding_12"
            android:paddingTop="2dp"
            android:textSize="@dimen/text_size_12"
            android:paddingBottom="2dp"
            android:textColor="@color/white"
            android:background="@drawable/price_pill_bg"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@+id/image_art"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>