<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.player.PlayerActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="00dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/image_art"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_24"
            app:layout_constraintTop_toBottomOf="@+id/text_album"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            app:layout_constraintBottom_toTopOf="@+id/text_descriptions"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingStart="@dimen/text_size_12"
            android:paddingEnd="@dimen/text_size_12"
            android:text="@string/text_title"
            android:id="@+id/text_track"
            android:textAlignment="center"
            android:visibility="gone"
            android:layout_marginStart="@dimen/text_size_12"
            android:layout_marginEnd="@dimen/text_size_12"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_artist"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:ellipsize="end"
        android:paddingStart="@dimen/text_size_12"
        android:paddingEnd="@dimen/text_size_12"
        android:id="@+id/text_artist"
        android:text="@string/text_artist"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/text_size_12"
        android:layout_marginStart="@dimen/text_size_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/streamProgress"
        android:layout_marginBottom="32dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:paddingStart="@dimen/text_size_12"
            android:paddingEnd="@dimen/text_size_12"
            android:id="@+id/text_descriptions"
            android:text="@string/text_description"
            android:textAlignment="textStart"
            android:maxLines="8"
            android:layout_marginTop="@dimen/margin_8"
            android:scrollbars = "vertical"
            android:layout_marginEnd="@dimen/text_size_12"
            android:layout_marginStart="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/streamProgress"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:id="@+id/text_album"
            android:layout_marginStart="@dimen/margin_16"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/text_size_12"
            android:layout_marginBottom="@dimen/margin_8"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <ImageView
            android:layout_width="@dimen/layout_size_80"
            android:layout_height="@dimen/layout_size_80"
            app:srcCompat="@drawable/ic_play"
            android:id="@+id/image_play"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/layout_size_80"
            android:layout_height="@dimen/layout_size_80"
            android:id="@+id/streamProgress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/text_size_12"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

    <ImageView
            android:layout_width="@dimen/layout_size_56"
            android:layout_height="@dimen/layout_size_56"
            android:id="@+id/image_prev"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/text_size_12"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_prev"
            app:layout_constraintEnd_toStartOf="@+id/streamProgress"
            app:layout_constraintTop_toTopOf="@+id/streamProgress"
            app:layout_constraintBottom_toBottomOf="@+id/streamProgress"/>

    <ImageView
            android:layout_width="@dimen/layout_size_56"
            android:layout_height="@dimen/layout_size_56"
            app:srcCompat="@drawable/ic_next"
            android:id="@+id/image_next"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@+id/streamProgress"
            android:layout_marginStart="@dimen/margin_24"
            app:layout_constraintTop_toTopOf="@+id/streamProgress"
            android:layout_marginBottom="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="@+id/streamProgress"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/layout_size_80"
            android:layout_height="@dimen/layout_size_80"
            android:id="@+id/progress"
            app:layout_constraintTop_toTopOf="@+id/image_art"
            app:layout_constraintBottom_toBottomOf="@+id/image_art"
            app:layout_constraintEnd_toEndOf="@+id/image_art"
            app:layout_constraintStart_toStartOf="@+id/image_art"/>

</androidx.constraintlayout.widget.ConstraintLayout>